@@ -638,29 +638,40 @@ all the result list to a single list. FUNCTION must return a list."
   (mapcan (lambda (x) (and (numberp x) (list x)))
           '(a 1 b c 3 4 d 5))
     =>  (1 3 4 5)
-
-  (mapcan (lambda (x) (cons x x)) '(1 2 3 4 5))
-   => (1 2 3 4 5 . 5)
 )
 
-#-sbcl
+#-(or abcl sbcl)
 (tests mapcan.2
-  ; not sure if the function returning an atom is valid
-  ; but older SBCL and ABCL accept this, too.
-  ; SBCL 2.4.0+ gives an error
-  (mapcan (lambda (x) x) '(1 2 3 4 5))
-   => 5
-
+  (signals-error (mapcan (lambda (x) (cons x x)) '(1 2 3 4 5)) type-error) => t
+  ; => (1 2 3 4 5 . 5)
 )
 
+#-abcl
 (tests mapcan.3
-  (mapcan (lambda (x) (cons x x)) '(1 2 3 4 5)) => (1 2 3 4 5 . 5)
+  ; older SBCL and ABCL accept this, too.
+  ; SBCL 2.4.0+ gives an error
+  (signals-error (mapcan (lambda (x) x) '(1 2 3 4 5)) type-error) => t
+  ; => 5
+)
+
+
+;; from https://gitlab.common-lisp.net/cmucl/cmucl/-/issues/196
+#-abcl
+(tests mapcan.4
+  (signals-error (mapcan #'identity '(1 2 3)) type-error) => t
+  ; => 3
 )
 
 
 ;; test mapcon
 (tests mapcon
   (mapcon #'list '(1 2 3 4)) =>  ((1 2 3 4) (2 3 4) (3 4) (4))
+)
+
+;; from https://gitlab.common-lisp.net/cmucl/cmucl/-/issues/196
+#-abcl
+(tests mapcon.2
+  (signals-error (mapcon #'car '(1 2 3)) type-error) => t
 )
 
 
