@@ -14,6 +14,8 @@ Changes in JMurmel-1.4.7 relative to JMurmel-1.4.6
  * fixed setq with multiple assignments and multiple-value-call
  * fixed mlib: evaluation order in push, pushnew, incf, decf
  * fixed mlib: fixed acceptable arguments for "return-type" for map
+ * fixed mlib: mapcan/ mapcon will reject dotted lists returned from the function and behave more
+   along the lines of what https://gitlab.common-lisp.net/cmucl/cmucl/-/issues/196 suggests
 
 
 Changes in JMurmel-1.4.6 relative to JMurmel-1.4.5
